# orx-funvec

./: Cargo.toml  README.md
benches/: d1_scalar_optimization.rs  d1_vec_at.rs  d1_vec_iter_range.rs  d1_vec_iter_scattered.rs  funvec_d1_scalar_optimization.rs  funvec_d1_vec_at.rs  funvec_d1_vec_iter_range.rs  funvec_d1_vec_iter_scattered.rs
src/: empty_vec.rs  funvec.rs  funvec_d1.rs  funvec_d2.rs  funvec_d3.rs  funvec_d4.rs  funvec_ref.rs  funvec_val.rs  index.rs  iter_over_ref.rs  iter_over_val.rs  lib.rs  scalar_as_vec.rs  scalar_asvec.rs  vectors_by_scalars.rs
src/d1/: indexmap.rs  into_index.rs  ndarray.rs  smallvec.rs  std.rs
src/d2/: indexmap.rs  into_index.rs  ndarray.rs  smallvec.rs  std.rs
src/d3/: indexmap.rs  into_index.rs  mod.rs  ndarray.rs  smallvec.rs  std.rs
src/d4/: indexmap.rs  into_index.rs  ndarray.rs  smallvec.rs  std.rs
src/d_any/: box_dyn_fn.rs  closure.rs  indexmap.rs  mod.rs  scalars.rs  std.rs
src/impl_dim1/: impl_vecref.rs  impl_vecval.rs
src/impl_dim1/iterators/: mapref_iter.rs  mapval_iter.rs
src/impl_dim2/: impl_vecref.rs  impl_vecval.rs
src/impl_dim2/iterators/: mapref_iter.rs  mapval_iter.rs
src/impl_dim3/: impl_vecref.rs  impl_vecval.rs
src/impl_dim3/iterators/: mapref_iter.rs  mapval_iter.rs
src/impl_dim4/: impl_vecref.rs  impl_vecval.rs  mod.rs
src/impl_dim4/iterators/: mapref_iter.rs  mapval_iter.rs  mod.rs
tests/: boxdynfn.rs  closure.rs  closure_2.rs  closure_3.rs  closure_4.rs  closure_optref.rs  closure_optref_2.rs  closure_optref_3.rs  closure_optref_4.rs  d1.rs  funvecref_d2.rs  funvecval_d2.rs  maps.rs  mcnf.rs  vec.rs
